Links to beets.io

--- a/_posts/2012-08-01-new-blog.md
+++ b/_posts/2012-08-01-new-blog.md
@@ -25,4 +25,4 @@ source for the site is
 [Jekyll]: http://jekyllrb.com/
 [atom]: /blog/atom.xml
 [b33ts]: http://twitter.com/b33ts
-[beets blog]: http://beets.radbox.org/blog/
+[beets blog]: {{site.url}}/blog/
