--- a/_posts/2012-09-09-py3k.md
+++ b/_posts/2012-09-09-py3k.md
@@ -52,7 +52,7 @@ When the leap does eventually happen, I plan to leave Python 2 behind entirely. 
 
 While beets will almost certainly not make the Python 3 leap until after [1.0][], that day is not as distant as it might seem at first.
 
-[1.0]: http://beets.radbox.org/blog/one-point-oh.html
+[1.0]: {{site.url}}/blog/one-point-oh.html
 [Headphones]: https://github.com/rembo10/headphones/
 [convention]: https://github.com/sampsyo/beets/wiki/Hacking
 [fwdc]: https://github.com/sampsyo/beets/wiki/Python3
