--- a/_posts/2012-10-06-twitter.md
+++ b/_posts/2012-10-06-twitter.md
@@ -24,8 +24,8 @@ None of these are as simple as my current setup with Twitter. Do you have a bett
 [widgets]: https://twitter.com/settings/widgets
 [tweetbot]: http://tapbots.com/tweetbot/
 [api11]: https://dev.twitter.com/blog/changes-coming-to-twitter-api
-[beets-home]: http://beets.radbox.org
+[beets-home]: {{site.url}}
 [beets-twitter]: https://twitter.com/b33ts
-[blog]: http://beets.radbox.org/blog/
+[blog]: {{site.url}}/blog/
 [tent]: http://tent.io/
 [app.net]: http://app.net/
