--- a/_posts/2012-08-01-new-blog.md
+++ b/_posts/2012-08-01-new-blog.md
@@ -15,12 +15,12 @@ These are some of the posts you can expect as the blog gets rolling:
 
 [bluelet]: https://github.com/sampsyo/bluelet
 [confit]: https://github.com/sampsyo/confit
-[pyacoustid]: https://github.com/sampsyo/pyacoustid
-[audioread]: https://github.com/sampsyo/audioread
+[pyacoustid]: https://github.com/beetbox/pyacoustid
+[audioread]: https://github.com/beetbox/audioread
 
 You can subscribe to this blog using its [Atom feed][atom]. The [Jekyll][]
 source for the site is
-[on GitHub](https://github.com/sampsyo/beets/tree/gh-pages).
+[on GitHub](https://github.com/beetbox/beets/tree/gh-pages).
 
 [Jekyll]: http://jekyllrb.com/
 [atom]: /blog/atom.xml
