--- a/_posts/2012-09-09-py3k.md
+++ b/_posts/2012-09-09-py3k.md
@@ -39,8 +39,8 @@ Some dependencies ([Unidecode][], [pyLast][], [Colorama][], and [Bluelet][]) are
 [web]: http://beets.readthedocs.org/en/1.0b15/plugins/web.html
 [rg]: http://beets.readthedocs.org/en/1.0b15/plugins/replaygain.html
 [bpd]: http://beets.readthedocs.org/en/1.0b15/plugins/bpd.html
-[pyacoustid]: https://github.com/sampsyo/pyacoustid
-[audioread]: https://github.com/sampsyo/audioread
+[pyacoustid]: https://github.com/beetbox/pyacoustid
+[audioread]: https://github.com/beetbox/audioread
 [pygst]: http://gstreamer.freedesktop.org/modules/gst-python.html
 [armin]: http://lucumr.pocoo.org/2011/12/7/thoughts-on-python3/
 
@@ -54,5 +54,5 @@ While beets will almost certainly not make the Python 3 leap until after [1.0][]
 
 [1.0]: {{site.url}}/blog/one-point-oh.html
 [Headphones]: https://github.com/rembo10/headphones/
-[convention]: https://github.com/sampsyo/beets/wiki/Hacking
-[fwdc]: https://github.com/sampsyo/beets/wiki/Python3
+[convention]: https://github.com/beetbox/beets/wiki/Hacking
+[fwdc]: https://github.com/beetbox/beets/wiki/Python3
